docs/requirements/v3.8.1/REQUIREMENTS.md

Requirements Summary
====================

# default

## As a user, I want a default configuration for harvest included in the tool package ([#37](https://github.com/NASA-PDS/harvest/issues/37)) 


This requirement is not impacted by the current version
## As a user, I want to be able to ingest a directory of data that is not part of a bundle ([#45](https://github.com/NASA-PDS/harvest/issues/45)) 


This requirement is not impacted by the current version
## As a user, I want Harvest automatically convert date / time fields to ISO format supported by Elasticsearch ([#54](https://github.com/NASA-PDS/harvest/issues/54)) 


This requirement is not impacted by the current version
## As a user, I want to ingest the PDS4 label as JSON in a binary blob form ([#60](https://github.com/NASA-PDS/harvest/issues/60)) 


This requirement is not impacted by the current version
## As an ingest user, I want a schema to validate harvest config against ([#61](https://github.com/NASA-PDS/harvest/issues/61)) 


This requirement is not impacted by the current version
## As a user, I want to be able to see a summary of all logs messages after harvest execution completes ([#82](https://github.com/NASA-PDS/harvest/issues/82)) 


This requirement is not impacted by the current version
## As a user, I want to know when the file/label URL is not a URL ([#98](https://github.com/NASA-PDS/harvest/issues/98)) 


This requirement is not impacted by the current version
## As a Data Archivist, I want to log the successful/failed loading of a data product in a centralized location ([#117](https://github.com/NASA-PDS/harvest/issues/117)) 


This requirement is not impacted by the current version
## As a developer, I want to know what version of Harvest was used to load a product ([#119](https://github.com/NASA-PDS/harvest/issues/119)) 


This requirement is not impacted by the current version
## As a Node Operator, I want to specify an alternate file paths for 1 or more archive products ([#123](https://github.com/NASA-PDS/harvest/issues/123)) 


This requirement is not impacted by the current version
## As a user, I want to ingest data products with labels having `.lblx` file extension ([#130](https://github.com/NASA-PDS/harvest/issues/130)) 


This requirement is not impacted by the current version
## As a user, I want to default archive_status for loaded products to be configurable ([#135](https://github.com/NASA-PDS/harvest/issues/135)) 


This requirement is not impacted by the current version
## As a user, I want to define custom metadata fields ([#136](https://github.com/NASA-PDS/harvest/issues/136)) 


This requirement is not impacted by the current version